Fix sidebar active item color in dark mode

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -86,8 +86,18 @@ $bootstrap-icons-font-src: url('~bootstrap-icons/font/fonts/bootstrap-icons.woff
     /* Adjust padding because of border */
 }
 
+html[data-bs-theme="dark"] #sidebar .menu .sidebar-item.active>.sidebar-link {
+    background-color: rgba(255, 255, 255, 0.08);
+    color: #ffffff;
+    border-left-color: #ffffff;
+}
+
 #sidebar .menu .sidebar-item.active>.sidebar-link i {
     color: #1f2937;
+}
+
+html[data-bs-theme="dark"] #sidebar .menu .sidebar-item.active>.sidebar-link i {
+    color: #ffffff;
 }
 
 /* Submenu Styling */
